open tags and categories

--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Yancy's Blog
 subtitle:
-description:
+description: 学无止境
 keywords:
-author: John Doe
-language:
+author: Yancy
+language: zh-Hans
 timezone:
 
 # URL
