modify language in _config.xml

--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,12 @@ subtitle:
 description: 学无止境
 keywords:
 author: Yancy
-language: zh-Hans
+language: zh-CN
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: https://hello-yancy.github.io
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
